...
        "Lumber",
        "arch-lumber",
        AppText.LUMBER_REPOSITORY_DESCRIPTION,
        AppText.LUMBER_REPOSITORY_USAGE
    ),
    STORAGE(
        "Storage",
        "arch-storage",
        AppText.STORAGE_REPOSITORY_DESCRIPTION,
        AppText.STORAGE_REPOSITORY_USAGE
    );

    val githubUrl: String get() = "https://github.com/matheus-corregiari/$repository"
...
